Update directory strucutre.

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -3,10 +3,10 @@ MAINTAINER Todor Nikolov <nikolov.todor@gmail.com>
 
 RUN apk add --no-cache bash
 
-COPY . /go/src/go-game
-WORKDIR /go/src/go-game/cmd/gogame
+COPY . /go/src/go-hangman
+WORKDIR /go/src/go-hangman/cmd/hangman
 
 RUN ["go", "get"]
-RUN ["go", "build", "-o", "bin/go-game"]
+RUN ["go", "build", "-o", "bin/hangman"]
 
-RUN ["chmod", "+x", "/go/src/go-game/cmd/gogame/scripts/run-app.sh"]
+RUN ["chmod", "+x", "/go/src/go-hangman/cmd/hangman/scripts/run-app.sh"]
